vicis_ir/src/ir/module/snapshots/vicis_ir__ir__module__parser__parse_example_loop.snap
---
source: src/ir/module/parser.rs
expression: module

---
source_filename = "c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"


define external dso_local default i32 @main() #0 {
0:
    %1 = alloca i32, i32 1, align 4
    %2 = alloca i32, i32 1, align 4
    store i32 0, i32* %1, align 4
    store i32 0, i32* %2, align 4
    br label %3
3:
    %4 = load i32, i32* %2, align 4
    %5 = icmp slt i32 %4, 10
    br i1 %5, label %6, label %10
6:
    br label %7
7:
    %8 = load i32, i32* %2, align 4
    %9 = add nsw i32 %8, 1
    store i32 %9, i32* %2, align 4
    br label %3
10:
    ret i32 0
}

attributes #0 = { noinline nounwind optnone uwtable "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "frame-pointer"="all" "less-precise-fpmad"="false" "min-legal-vector-width"="0" "no-infs-fp-math"="false" "no-jump-tables"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
!llvm.ident = !{!1}
!0 = !{i32 1, !"wchar_size", i32 4}
!llvm.module.flags = !{!0}
!1 = !{!"clang version 10.0.0-4ubuntu1 "}

